[metadata]
name=niftypet
version=2.0.0
description=CUDA-accelerated Python utilities for high-throughput PET/MR image reconstruction and analysis
long_description=file: README.rst
long_description_content_type=text/x-rst
license=Apache 2.0
license_file=LICENCE
url=https://github.com/NiftyPET/NiftyPET
project_urls=
    Changelog=https://github.com/NiftyPET/NiftyPET/releases
    Documentation=https://niftypet.readthedocs.io
author=Pawel Markiewicz
author_email=p.markiewicz@ucl.ac.uk
maintainer=Casper da Costa-Luis
maintainer_email=imaging@cdcl.ml
keywords=PET, MR, image reconstruction, processing, analysis
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Medical Science Apps.
[options]
install_requires=
    cuvec
    miutil[nii,plot]
    nimpa>=2,<3
    nipet>=2,<3
python_requires=>=3.6
